--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,22 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* .bright_theme {
+  background: #eeaeca;
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
+} */
+
+.dark_theme {
+  --light-text: #deddda;
+  background: #241f31;
+  background: radial-gradient(
+    circle,
+    rgba(36, 31, 49, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
