--- a/src/index.css
+++ b/src/index.css
@@ -4,36 +4,21 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background: #eeaeca;
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgba(148, 187, 233, 1) 100%
-  );
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* .bright_theme {
-  background: #eeaeca;
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgba(148, 187, 233, 1) 100%
-  );
-} */
+:root {
+  --gradient-start: rgba(238, 174, 202, 1);
+  --gradient-end: rgba(148, 187, 233, 1);
+  background: radial-gradient(circle, var(--gradient-start) 0%, var(--gradient-end) 100%);
+}
 
-.dark_theme {
+[data-theme="dark"] {
+  --gradient-start: rgba(36, 31, 49, 1);
+  --gradient-end: rgba(0, 0, 0, 1);
   --light-text: #deddda;
-  background: #241f31;
-  background: radial-gradient(
-    circle,
-    rgba(36, 31, 49, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
-  );
+  background: radial-gradient(circle, var(--gradient-start) 0%, var(--gradient-end) 100%);
 }
