--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,20 @@
 @import "tailwindcss";
 
 :root {
-    background: radial-gradient(circle,rgba(26, 26, 26, 1) 0%, rgba(15, 15, 15, 1 ) 100%);
-  --foreground: #171717;
+  --background: radial-gradient(
+    circle,
+    rgba(26, 26, 26, 1) 0%,
+    rgba(15, 15, 15, 1) 100%
+  );
+  --foreground: #ffffff;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    background: radial-gradient(circle,rgba(26, 26, 26, 1) 0%, rgba(15, 15, 15, 1 ) 100%);
-    --foreground: #ededed;
-  }
 }
 
 body {
